--- a/weather.html
+++ b/weather.html
@@ -4,10 +4,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1.0">
   <title>Weather App</title>
-  <link href="css/standardize.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
 </head>
-<body class="body page-index clearfix">
+<body>
   <div class="container clearfix">
     <p class="location"></p>
     <p class="temperature"></p>
@@ -20,7 +19,6 @@
       <div class="windspeed"></div>
     </div>
   </div>
-  
 <script src="js/jquery-2.1.4.js"></script>
 <script src="js/jquery.mobile.custom.min.js"></script>
 <script src="js/jquery.simpleWeather.min.js"></script>
