--- a/weather.html
+++ b/weather.html
@@ -8,8 +8,14 @@
 </head>
 <body>
   <div class="container clearfix">
-    <p class="location"></p>
-    <p class="temperature"></p>
+	  <div class="main">
+		      <p class="temperature"></p>
+			  <p class="location"></p>
+			  <div class="toggle-degree">
+				  <input type="checkbox" id="toggle">
+				  <label for="toggle"></label>
+			  </div>
+	  </div>
     <div class="climate_bg"></div>
     <div class="info_bg">
       <img class="dropicon" src="images/Droplet.svg">
